@@ -1,1 +1,1 @@
-(not #f)
+(not #t)
